# Week 1
 > May 7th
 - Project and project repository created.
 - Necessary files created (readme, changelog, licenses)
 > May 10th
 - Created the main menu wireframe
 - Updated licenses with icons used in main menu wireframe
 > Summary (Written May 10th)
 - Slow week in terms of app production due to getting the project proposal done. A little behind on my desired weekly milestone goal as I    wanted to have created all the wireframes this week. Next week will be a much more productive week now that the project proposal is out    of the way.
# Week 2
 > May 11th
 - Created StatisticActivity for the statistic section
 - Created StatisticAdapter & Statistic files for RecyclerView in StatisticActivity
 - Created APIHandler for requesting JSON from Covid-19 API.
 - Parsed JSON data from Covid-19 API and filled RecyclerView with Country name, Confirmed Cases, Recovered Cases and Death Cases.
 > May 12th
 - Added wireframe design
 - Created text view to show date the data was last updated
 - Added circular progress bar
 > May 17th
 - Added recycler view search functionality
 - Removed static recycler view sizing (E.g. defined width (100dp) and height (50dp))
 > Summary (Written May 17th)
 - Second week of production and most of the functionality has been added. Definitely caught up and achieved the desired weekly milestone. Next week I will continue to work on the Statistics page by integrating the google maps API and comment on existing code.
 #TO-DO
 - Comments