@@ -142,8 +142,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/statisticRecyclerView"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/recoveredSummary"
+        app:layout_constraintTop_toBottomOf="@+id/recoveredSummary" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -159,9 +159,10 @@
 
     <SearchView
         android:id="@+id/searchView"
-        android:layout_width="178dp"
-        android:layout_height="32dp"
+        android:layout_width="411dp"
+        android:layout_height="33dp"
         app:layout_constraintBottom_toTopOf="@+id/statisticRecyclerView"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
