@@ -81,7 +81,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:textColor="@android:color/holo_red_dark"
-        android:textSize="8sp"
+        android:textSize="10sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/confirmedView" />
 
@@ -89,8 +89,8 @@
         android:id="@+id/newRecovered"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/holo_green_light"
-        android:textSize="8sp"
+        android:textColor="@android:color/holo_green_dark"
+        android:textSize="10sp"
         app:layout_constraintStart_toStartOf="@+id/recoveredView"
         app:layout_constraintTop_toBottomOf="@+id/recoveredView" />
 
@@ -99,7 +99,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/holo_red_dark"
-        android:textSize="8sp"
+        android:textSize="10sp"
         app:layout_constraintStart_toStartOf="@+id/deathView"
         app:layout_constraintTop_toBottomOf="@+id/deathView" />
 
